--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/lezisilva163/decision-backend#readme",
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
+    "@types/crypto-js": "4.2.2",
     "@types/node": "20.14.2",
     "prisma": "5.15.0",
     "tsup": "8.1.0",
@@ -31,6 +32,7 @@
     "@fastify/cors": "9.0.1",
     "@prisma/client": "5.15.0",
     "bcryptjs": "2.4.3",
+    "crypto-js": "4.2.0",
     "fastify": "4.27.0",
     "zod": "3.23.8"
   }
