--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NODE_ENV=dev
 PORT=3333
 DATABASE_URL="postgresql://docker:docker@localhost:5432/decision?schema=public"
+SECRET_KEY="supersecretkey123"
