--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file .env src/server.ts",
+    "migrate:dev": "npx prisma migrate dev",
     "start": "node build/server.js",
     "build": "tsup --env-file .env src/server.ts"
   },
